[metadata]
version = 0.0.1
name = noni
author = Allen.Wu
author-email = allenlikeu@gmail.com
summary = ...
license = MIT
description-file =
    README.md
home-page = https://github.com/Allen5/noni
requires-python = >=2.7
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[files]
packages =
    noni
data-files =
    etc/pbr = etc/pbr/*
